k8s/overlays/prod/managed-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ExternalName
  externalName: prod-db.amazonaws.com
  ports:
  - port: 5432
