k8s/overlays/prod/managed-redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ExternalName
  externalName: prod-redis.amazonaws.com
  ports:
  - port: 6379
